--- a/test.html
+++ b/test.html
@@ -1,68 +1,28 @@
 <!DOCTYPE html>
-<html>
-
+<html lang="en">
 <head>
-    <meta charset="utf-8" />
-    <title>Homepage</title>
-    <style type="text/css">
-        /* Markup */
-        body {
-            background-color: #3daa1f;
-        }
-
-        .arrow {
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            transform: translate(-50%, -50%);
-        }
-
-        .arrow p {
-            margin: 0 0 20px;
-        }
-
-        /* Arrow & Hover Animation */
-        #more-arrows {
-            width: 75px;
-            height: 65px;
-        }
-
-        #more-arrows:hover polygon {
-            fill: #FFF;
-            transition: all .2s ease-out;
-        }
-
-        #more-arrows:hover polygon.arrow-bottom {
-            transform: translateY(-18px);
-        }
-
-        #more-arrows:hover polygon.arrow-top {
-            transform: translateY(18px);
-        }
-
-        polygon {
-            fill: #FFF;
-            transition: all .2s ease-out;
-        }
-
-        polygon.arrow-middle {
-            opacity: 0.75;
-        }
-
-        polygon.arrow-top {
-            opacity: 0.5;
+    <meta charset="utf-8">
+    <style>
+        #myElement{
+            border:1px solid green;
+            width: 100px;
         }
     </style>
 </head>
-
 <body>
-    <div class="arrow">
-        <svg id="more-arrows">
-            <polygon class="arrow-top" points="37.6,27.9 1.8,1.3 3.3,0 37.6,25.3 71.9,0 73.7,1.3 " />
-            <polygon class="arrow-middle" points="37.6,45.8 0.8,18.7 4.4,16.4 37.6,41.2 71.2,16.4 74.5,18.7 " />
-            <polygon class="arrow-bottom" points="37.6,64 0,36.1 5.1,32.8 37.6,56.8 70.4,32.8 75.5,36.1 " />
-        </svg>
+    <h2>Get Height of HTML Element using JavaScript</h2>
+    <div id="myElement">
+        <p>Div Part 1.</p>
+        <p>Div Part 2.</p>
     </div>
+    <br>
+    <button type="button" onclick="execute()">Click Me</button>
+    <script>
+    function execute(){
+        var element = document.getElementById('myElement');
+        var height = element.clientHeight;
+        console.log("Height is " + height + "px");
+    }
+    </script>
 </body>
-
 </html>
