--- a/index.html
+++ b/index.html
@@ -129,9 +129,9 @@
                 <div class="bubble smaller" id="EPFLCourses">
                     <a
                         href="https://www.epfl.ch/about/sustainability/fr/durabilite-dans-leducation/programmes-detudes-cours-et-moocs/">
-                        <!-- <img src="logo\EPFL courses.png" alt="Image"> -->
-                        <span>EPFL</span>
-                        <span>Courses</span>
+                        <img src="logo\EPFL courses.png" alt="Image">
+                        <!-- <span>EPFL</span>
+                        <span>Courses</span> -->
                     </a>
                     <div class="text-description">
                         <h3>EPFL Courses</h3>
@@ -141,8 +141,8 @@
                 <!-- Coaching in sustainability -->
                 <div class="bubble smaller" id="CoachingSustainability">
                     <a href="https://people.epfl.ch/michka.melo">
-                        <!-- <img src="logo\Coaching sustainability.png" alt="Image"> -->
-                        <span>Coaching in Sustainability</span>
+                        <img src="logo\Coaching sustainability.png" alt="Image">
+                        <!-- <span>Coaching in Sustainability</span> -->
                     </a>
                     <div class="text-description">
                         <h3>Coaching in sustainability</h3>
@@ -258,9 +258,9 @@
                 <!-- Point Vélo -->
                 <div class="bubble smaller" id="Pointvélo">
                     <a href="https://www.epfl.ch/campus/mobility/mobility-and-travel/commuting/point-velo/">
-                        <!-- <img src="logo\point velo title.png" alt="Image"> -->
-                        <span>Point</span>
-                        <span>Vélo</span>
+                        <img src="logo\point velo title.png" alt="Image">
+                        <!-- <span>Point</span>
+                        <span>Vélo</span> -->
                     </a>
                     <div class="text-description">
                         <h3>Point Vélo</h3>
@@ -276,9 +276,9 @@
                 <!-- Point Smart (Cellphones) -->
                 <div class="bubble smaller" id="PointSmartCellphones">
                     <a href="https://www.epfl.ch/about/sustainability/sustainable-it/point-smart/">
-                        <!-- <img src="logo\point smart title.png" alt="Image"> -->
-                        <span>Point</span>
-                        <span>Smart</span>
+                        <img src="logo\point smart title.png" alt="Image">
+                        <!-- <span>Point</span>
+                        <span>Smart</span> -->
                     </a>
                     <div class="text-description">
                         <h3>Point Smart (Cellphones)</h3>
@@ -540,8 +540,8 @@
                 <div class="bubble smaller" id="Make">
                     <a
                         href="https://www.epfl.ch/education/educational-initiatives/discovery-learning-program-2/interdisciplinary-projects/">
-                        <!-- <img src="logo\EPFL Make.png" alt="Image"> -->
-                        <span>MAKE</span>
+                        <img src="logo\EPFL Make.png" alt="Image">
+                        <!-- <span>MAKE</span> -->
                     </a>
                     <div class="text-description">
                         <h3>Make</h3>
@@ -625,8 +625,8 @@
                 <!-- Trust and Support Network (TSN) -->
                 <div class="bubble smaller" id="TrustandSupportNetworkTSN">
                     <a href="https://www.epfl.ch/campus/community/trust-and-support-network/">
-                        <!-- <img src="logo\Trust-support-network-epfl-.png" alt="Image"> -->
-                        <span>TSN</span>
+                        <img src="logo\Trust-support-network-epfl.png" alt="Image">
+                        <!-- <span>TSN</span> -->
                     </a>
                     <div class="text-description">
                         <h3>Trust and Support Network (TSN)</h3>
@@ -641,9 +641,9 @@
                 <!-- Guided meditation -->
                 <div class="bubble smaller" id="Guidedmeditation">
                     <a href="https://www.epfl.ch/campus/spiritual-care/activites/meditation/">
-                        <!-- <img src="logo\meditation.png" alt="Image"> -->
-                        <span>Guided</span>
-                        <span>meditation</span>
+                        <img src="logo\meditation.png" alt="Image">
+                        <!-- <span>Guided</span>
+                        <span>meditation</span> -->
                     </a>
                     <div class="text-description">
                         <h3>Guided meditation</h3>
