--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                     <label for="t1">language</label>
                     <ul>
                         <li><a href="index.html">English</a></li>
-                        <li><a href="#">Francais</a></li>
+                        <li><a href="index_fr.html">Francais</a></li>
                     </ul>
                 </div>
             </div>
