--- a/index_fr.html
+++ b/index_fr.html
@@ -19,7 +19,7 @@
                     <label for="t1">langue</label>
                     <ul>
                         <li><a href="index.html">English</a></li>
-                        <li><a href="#">Francais</a></li>
+                        <li><a href="index_fr.html">Francais</a></li>
                     </ul>
                 </div>
             </div>
