--- a/index.html
+++ b/index.html
@@ -660,7 +660,7 @@
                         <!-- <span>Dorigny Forest</span> -->
                     </a>
                     <div class="text-description">
-                        <h3>Forêt de Dorigny</h3>
+                        <h3>Dorigny Forest</h3>
                         It is a small forest close to UNIL, very beautiful and quiet.
                     </div>
                 </div>
