--- a/index_fr.html
+++ b/index_fr.html
@@ -506,7 +506,8 @@
             <!-- Category 5 : Take Care-->
             <div class="bubble" id="bubble5">
                 <img src="logo\Sain.png" alt="Image">
-                <span>Prends soin de toi</span>
+                <span>Prends soin</span>
+                <span>de toi</span>
                 <div class="border" id="border5"></div>
                 <!-- Sports center EPFL-UNIL -->
                 <div class="bubble smaller" id="SportscenterEPFL-UNIL">
