--- a/index_fr.html
+++ b/index_fr.html
@@ -46,7 +46,8 @@
                     </div>
                     <div class="sub-bubble" id="subbubble2">
                         <img src="logo\Services.png" alt="Image">
-                        <span>Profite des services</span>
+                        <span>Profite</span>
+                        <span>des services</span>
                     </div>
                     <div class="sub-bubble" id="subbubble3">
                         <img src="logo\Community.png" alt="Image">
@@ -56,11 +57,13 @@
                 <div class="midcontainer" id="lower_subbubbles">
                     <div class="sub-bubble" id="subbubble4">
                         <img src="logo\Startup.png" alt="Image">
-                        <span>Lance ton projet</span>
+                        <span>Lance</span>
+                        <span>ton projet</span>
                     </div>
                     <div class="sub-bubble" id="subbubble5">
                         <img src="logo\Sain.png" alt="Image">
-                        <span>Prends soin de toi</span>
+                        <span>Prends soin</span>
+                        <span>de toi</span>
                     </div>
                 </div>
             </div>
@@ -163,7 +166,8 @@
             <!-- Category 2 : Enjoy Services-->
             <div class="bubble" id="bubble2">
                 <img src="logo\Services.png" alt="Image">
-                <span>Profite des services</span>
+                <span>Profite</span>
+                <span>des services</span>
                 <div class="border" id="border2"></div>
                 <!-- Slow ta carrière -->
                 <div class="bubble smaller" id="Slowtacarrière">
