--- a/index_fr.html
+++ b/index_fr.html
@@ -34,7 +34,7 @@
                         les rendre facilement accessibles à tous.
                     </p>
                     <p>Pour entrer en contact avec l’équipe d’éducation au développement durable à propos de ce site ou
-                        pour d’autres raisons, n’hésitez pas à contacter sustainability@epfl.ch pour plus d’informations
+                        pour d’autres raisons, n’hésitez pas à contacter <a href="mailto:sustainability@epfl.ch">sustainability@epfl.ch</a> pour plus d’informations
                         !
                     </p>
             </div>
