--- a/index.html
+++ b/index.html
@@ -589,6 +589,16 @@
                         their own ideas and require a practical learning space.
                     </div>
                 </div>
+                <!-- Low Tech Lab -->
+                <div class="bubble smaller" id="LowTechLab">
+                    <a href="https://lowtechlab.unipoly.ch/">
+                        <img src="logo\low_tech_lab.png" alt="Image">
+                    </a>
+                    <div class="text-description">
+                        <h3>Low Tech Lab</h3>
+                        The Low Tech Lab is a student association that aims to promote low-tech solutions on campus.
+                    </div>
+                </div>
             </div>
             <!-- Category 5 : Take Care-->
             <div class="bubble" id="bubble5">
