--- a/index_fr.html
+++ b/index_fr.html
@@ -499,7 +499,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Ucreate</h3>
-                        Le programme UCreate s’adresse à tou·te·s les membres de la communauté UNIL : étudiant·e·s,
+                        Le programme d'entrepreneuriat UCreate s’adresse à tou·te·s les membres de la communauté UNIL : étudiant·e·s,
                         chercheur·euse·s, professeur·e·s, employé·e·s et alumni. Ce programme bilingue et
                         interdisciplinaire soutient tous types de projets. Nous encourageons particulièrement les
                         projets à impact social et/ou environnemental.
@@ -554,6 +554,16 @@
                         de tels projets. Inauguré officiellement en septembre 2018, le SKIL est en priorité destiné aux
                         étudiants de la Faculté ENAC mais reste ouvert plus largement aux étudiants de bachelor et de
                         master de l’EPFL.
+                    </div>
+                </div>
+                <!-- Low Tech Lab -->
+                <div class="bubble smaller" id="LowTechLab">
+                    <a href="https://lowtechlab.unipoly.ch/">
+                        <img src="logo\low_tech_lab.png" alt="Image">
+                    </a>
+                    <div class="text-description">
+                        <h3>Low Tech Lab</h3>
+                        Le Low Tech Lab est un projet étudiant qui vise à promouvoir les technologies low tech sur le campus
                     </div>
                 </div>
             </div>
