--- a/index.html
+++ b/index.html
@@ -528,7 +528,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Ucreate</h3>
-                        The UCreate program is for all members of the UNIL community : students, researchers,
+                        The UCreate entrepreneurial program is for all members of the UNIL community : students, researchers,
                         professors,
                         employees and alumni. This bilingual and interdisciplinary program supports all types of
                         projects.
