--- a/index_fr.html
+++ b/index_fr.html
@@ -563,7 +563,7 @@
                     </a>
                     <div class="text-description">
                         <h3>Low Tech Lab</h3>
-                        Le Low Tech Lab est un projet étudiant qui vise à promouvoir les technologies low tech sur le campus
+                        Le Low Tech Lab est un projet étudiant qui vise à promouvoir les technologies low tech sur le campus.
                     </div>
                 </div>
             </div>
