--- a/index.html
+++ b/index.html
@@ -596,7 +596,7 @@
                     </a>
                     <div class="text-description">
                         <h3>RebuiLT</h3>
-                        RebuiLT is a student association that aims to raise awareness of the circular economy and
+                        RebuiLT is a MAKE Initiative that aims to reuse and recycle construction waste.
                     </div>
                 </div>
                 <!-- Low Tech Lab -->
