--- a/index_fr.html
+++ b/index_fr.html
@@ -563,7 +563,7 @@
                     </a>
                     <div class="text-description">
                         <h3>RebuiLT</h3>
-                        RebuiLT est un projet étudiant qui vise à réutiliser les déchets de chantier pour construire des 
+                        RebuiLT est un projet étudiant qui vise à réutiliser les déchets de chantier dans la contruction urbaine.
                     </div>
                 </div>
                 <!-- Low Tech Lab -->
