--- a/index.html
+++ b/index.html
@@ -687,10 +687,10 @@
                 <!-- Jardins -->
                 <div class="bubble smaller" id="jardins">
                     <a href="https://unipoly.ch/jardins-campus-farmers/">
-                        <img src="logo\jardins.png" alt="Image">
+                        <img src="logo\jardin_campus_farmers.png" alt="Image">
                     </a>
                     <div class="text-description">
-                        <h3>Jardins</h3>
+                        <h3>Jardins - Campus Farmers</h3>
                         This project aims to allow students to grow vegetables on their campus in an organic way. Of
                         course it is a learning ground for gardening, but it is also a place where one (re)discovers a
                         relationship with the earth and nature as well as a place for exchange with other students.
