--- a/index_fr.html
+++ b/index_fr.html
@@ -655,10 +655,10 @@
                 <!-- Jardins -->
                 <div class="bubble smaller" id="jardins">
                     <a href="https://unipoly.ch/jardins-campus-farmers-english/">
-                        <img src="logo\jardins.png" alt="Image">
+                        <img src="logo\jardin_campus_farmers.png" alt="Image">
                     </a>
                     <div class="text-description">
-                        <h3>Jardins</h3>
+                        <h3>Jardins - Campus Farmers</h3>
                         Ce projet a pour but de permettre aux étudiants de cultiver des légumes sur leur campus de
                         manière biologique. Bien entendu il s’agit d’un terrain d’apprentissage du jardinage, mais c’est
                         aussi un endroit où l’on (re)découvre une relation avec la terre et la nature ainsi qu’un lieu
