--- a/index_fr.html
+++ b/index_fr.html
@@ -297,7 +297,7 @@
                 <!-- Epilibre -->
                 <div class="bubble smaller" id="epilibre">
                     <a href="https://unipoly.ch/epilibre/">
-                        <img src="logo\epilibre.png" alt="Image">
+                        <img src="logo\epilibre2.png" alt="Image">
                     </a>
                     <div class="text-description">
                         <h3>Epilibre</h3>
