--- a/index.html
+++ b/index.html
@@ -322,7 +322,7 @@
                 <!-- Epilibre -->
                 <div class="bubble smaller" id="epilibre">
                     <a href="https://unipoly.ch/epilibre-english/">
-                        <img src="logo\epilibre.png" alt="Image">
+                        <img src="logo\epilibre2.png" alt="Image">
                     </a>
                     <div class="text-description">
                         <h3>Epilibre</h3>
