Ingénieur.es Engagé.es

--- a/index.html
+++ b/index.html
@@ -460,6 +460,16 @@
                         partners around the world.
                     </div>
                 </div>
+                <!-- Ingénieur.es Engagé.es -->
+                <div class="bubble smaller" id="Ingénieur.es Engagé.es">
+                    <a href="https://ingenieurs-engages.org/">
+                        <img src="logo/ie_lausanne.png" alt="Image">
+                    </a>
+                    <div class="text-description">
+                        <h3>Ingénieur.es Engagé.es</h3>
+                        Ingénieur·es Engagé·es (IE) is a federation aiming to rethink the place of engineers in society. Composed of several groups, local and thematic, carrying actions or reflections in line with our values (described in our charter), focused on socio-environmental issues. The goal of Ingénieur·es Engagé·es is to be non-partisan, favors debate, open-mindedness and fits into a horizontal framework.
+                    </div>
+                </div>                
                 <!-- Amnesty des Hautes Ecoles Lausannoises -->
                 <div class="bubble smaller" id="AmnestydesHautesEcolesLausannoises">
                     <a href="https://www.unil.ch/associations/causes-sociales">
