--- a/index_fr.html
+++ b/index_fr.html
@@ -435,6 +435,16 @@
                         solutions en collaborant avec des partenaires à travers le monde.
                     </div>
                 </div>
+                <!-- Ingénieur.es Engagé.es -->
+                <div class="bubble smaller" id="Ingénieur.es Engagé.es">
+                    <a href="https://ingenieurs-engages.org/">
+                        <img src="logo/ie_lausanne.png" alt="Image">
+                    </a>
+                    <div class="text-description">
+                        <h3>Ingénieur.es Engagé.es</h3>
+                        Ingénieur-es Engagé-es (IE) est une fédération visant à repenser la place des ingénieurs dans la société. Composée de plusieurs groupes, locaux et thématiques, menant des actions ou des réflexions en accord avec nos valeurs (décrites dans notre charte), axées sur des questions socio-environnementales. Ingénieur-es Engagé-es se veut non partisan, privilégie le débat, l'ouverture d'esprit et s'inscrit dans un cadre horizontal.
+                    </div>
+                </div>
                 <!-- Amnesty des Hautes Ecoles Lausannoises -->
                 <div class="bubble smaller" id="AmnestydesHautesEcolesLausannoises">
                     <a href="https://www.unil.ch/associations/causes-sociales">
