--- a/index.html
+++ b/index.html
@@ -478,6 +478,17 @@
                         podcast, and have already organized a waste collection. All in a caring and inclusive way.
                     </div>
                 </div>
+                <!-- Drag Lab -->
+                <div class="bubble smaller" id="draglab">
+                    <a href="https://www.epfl.ch/campus/associations/list/asar/drag-lab/">
+                        <img src="logo\drag_lab.png" alt="Image">
+                    </a>
+                    <div class="text-description">
+                        <h3>DRAG Lab</h3>
+                        People studying, teaching or working at EPFL promoting parity and diversity in the architecture
+                        school through readings and discussions.
+                    </div>
+                </div>
                 <!-- Ferme de Bassenges -->
                 <div class="bubble smaller" id="FermedeBassenges">
                     <a href="https://fermedebassenges.ch/">
