--- a/index_fr.html
+++ b/index_fr.html
@@ -452,6 +452,17 @@
                         organisé une collecte de déchets. Le tout dans la bienveillance et l'inclusivité.
                     </div>
                 </div>
+                <!-- Drag Lab -->
+                <div class="bubble smaller" id="draglab">
+                    <a href="https://www.epfl.ch/campus/associations/list/asar/drag-lab/">
+                        <img src="logo\drag_lab.png" alt="Image">
+                    </a>
+                    <div class="text-description">
+                        <h3>DRAG Lab</h3>
+                        Des étudiant, enseignant ou personnes travaillant à l'EPFL promouvant la parité et la diversité
+                        au sein de l'école d'architecture à travers des lectures et des débats.
+                    </div>
+                </div>
                 <!-- Ferme de Bassenges -->
                 <div class="bubble smaller" id="FermedeBassenges">
                     <a href="https://fermedebassenges.ch/">
