--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                     <div class="text-description">
                         <h3>Semaine de la durabilité</h3>
                         Sustainability Week is the largest student sustainability project in Switzerland. It takes place
-                        every 4th week of the spring semester on the UNILEPFL campus. It aims to raise students'
+                        every spring semester on the UNIL/EPFL campus. It aims to raise students'
                         awareness
                         of sustainability and ecological issues.
                     </div>
