--- a/index_fr.html
+++ b/index_fr.html
@@ -92,7 +92,7 @@
                     <div class="text-description">
                         <h3>Semaine de la durabilité</h3>
                         La Semaine de la Durabilité est le plus grand projet de durabilité étudiant.e en Suisse. Elle a
-                        lieu chaque 4ème semaine du semestre de printemps sur le campus UNILEPFL. Elle a pour but de
+                        lieu chaque semestre de printemps sur le campus UNIL/EPFL. Elle a pour but de
                         sensibiliser les étudiant·e·x·s aux questions de durabilité et d’écologie.
                     </div>
                 </div>
