--- a/index.html
+++ b/index.html
@@ -467,9 +467,13 @@
                     </a>
                     <div class="text-description">
                         <h3>Ingénieur.es Engagé.es</h3>
-                        Ingénieur·es Engagé·es (IE) is a federation aiming to rethink the place of engineers in society. Composed of several groups, local and thematic, carrying actions or reflections in line with our values (described in our charter), focused on socio-environmental issues. The goal of Ingénieur·es Engagé·es is to be non-partisan, favors debate, open-mindedness and fits into a horizontal framework.
+                        Ingénieur·es Engagé·es (IE) is a federation aiming to rethink the place of engineers in society.
+                        Composed of several groups, local and thematic, carrying actions or reflections in line with our
+                        values (described in our charter), focused on socio-environmental issues. The goal of
+                        Ingénieur·es Engagé·es is to be non-partisan, favors debate, open-mindedness and fits into a
+                        horizontal framework.
                     </div>
-                </div>                
+                </div>
                 <!-- Amnesty des Hautes Ecoles Lausannoises -->
                 <div class="bubble smaller" id="AmnestydesHautesEcolesLausannoises">
                     <a href="https://www.unil.ch/associations/causes-sociales">
@@ -703,6 +707,20 @@
                         The guided meditations are open to the entire university community, regardless of the spiritual
                         tradition of the participant. During 10-15′, indications are given (in French and English) then
                         during the remaining 15-20′, it is complete silence.
+                    </div>
+                </div>
+                <!-- Apiculture -->
+                <div class="bubble smaller" id="apiculture">
+                    <a href="https://unipoly.ch/apiculture-english/">
+                        <img src="logo\apiculture.png" alt="Image">
+                    </a>
+                    <div class="text-description">
+                        <h3>Apiculture</h3>
+                        The goal of the Apiculture project is to raise awareness among students and staff on campus
+                        about the issue of bee colony collapse disorder and to become familiar with beekeeping. To do
+                        this, the project has its own apiary composed of about 5 hives located on the Bassenges farm
+                        estate since early 2017 allowing us to learn about beekeeping and produce honey when the bees
+                        have decided to do so.
                     </div>
                 </div>
                 <!-- Jardins -->
