--- a/index_fr.html
+++ b/index_fr.html
@@ -442,7 +442,11 @@
                     </a>
                     <div class="text-description">
                         <h3>Ingénieur.es Engagé.es</h3>
-                        Ingénieur-es Engagé-es (IE) est une fédération visant à repenser la place des ingénieurs dans la société. Composée de plusieurs groupes, locaux et thématiques, menant des actions ou des réflexions en accord avec nos valeurs (décrites dans notre charte), axées sur des questions socio-environnementales. Ingénieur-es Engagé-es se veut non partisan, privilégie le débat, l'ouverture d'esprit et s'inscrit dans un cadre horizontal.
+                        Ingénieur-es Engagé-es (IE) est une fédération visant à repenser la place des ingénieurs dans la
+                        société. Composée de plusieurs groupes, locaux et thématiques, menant des actions ou des
+                        réflexions en accord avec nos valeurs (décrites dans notre charte), axées sur des questions
+                        socio-environnementales. Ingénieur-es Engagé-es se veut non partisan, privilégie le débat,
+                        l'ouverture d'esprit et s'inscrit dans un cadre horizontal.
                     </div>
                 </div>
                 <!-- Amnesty des Hautes Ecoles Lausannoises -->
@@ -671,6 +675,20 @@
                         Les temps de méditation guidée sont ouverts à toute la communauté universitaire, quelle que soit
                         la tradition spirituelle du participant. Pendant 10-15′, des indications sont données (en
                         français et en anglais) puis pendant les 15-20′ restants, c'est le silence complet.
+                    </div>
+                </div>
+                <!-- Apiculture -->
+                <div class="bubble smaller" id="apiculture">
+                    <a href="https://unipoly.ch/apiculture/">
+                        <img src="logo\apiculture.png" alt="Image">
+                    </a>
+                    <div class="text-description">
+                        <h3>Apiculture</h3>
+                        Le but du projet Apiculture est de sensibiliser les étudiants et le personnel du campus à la
+                        problématique du syndrome d’effondrement des colonies d’abeilles et de se familiariser avec
+                        l’apiculture. Pour ce faire, le projet possède son propre rucher composé d’environ 5 ruches
+                        situé sur le domaine de la ferme de Bassenges depuis début 2017 nous permettant ainsi de
+                        s’initier à l’apiculture et de produire du miel lorsque les abeilles l’ont décidé.
                     </div>
                 </div>
                 <!-- Jardins -->
