--- a/index.html
+++ b/index.html
@@ -57,7 +57,8 @@
                 <div class="midcontainer" id="lower_subbubbles">
                     <div class="sub-bubble" id="subbubble4">
                         <img src="logo\Startup.png" alt="Image">
-                        <span>Launch Your Project</span>
+                        <span>Launch</span>
+                        <span>Your Project</span>
                     </div>
                     <div class="sub-bubble" id="subbubble5">
                         <img src="logo\Sain.png" alt="Image">
