--- a/index.html
+++ b/index.html
@@ -727,7 +727,7 @@
                 <!-- Jardins -->
                 <div class="bubble smaller" id="jardins">
                     <a href="https://unipoly.ch/jardins-campus-farmers/">
-                        <img src="logo\jardin_campus_farmers.png" alt="Image">
+                        <img src="logo\jardin_campus_farmers2.png" alt="Image">
                     </a>
                     <div class="text-description">
                         <h3>Jardins - Campus Farmers</h3>
