--- a/index_fr.html
+++ b/index_fr.html
@@ -17,7 +17,7 @@
             <div class="lang">
                 <div class="dropdown toggle">
                     <input id="t1" type="checkbox" unchecked>
-                    <label for="t1">language</label>
+                    <label for="t1">langage</label>
                     <ul>
                         <li><a href="index.html">English</a></li>
                         <li><a href="index_fr.html">Francais</a></li>
@@ -694,7 +694,7 @@
                 <!-- Jardins -->
                 <div class="bubble smaller" id="jardins">
                     <a href="https://unipoly.ch/jardins-campus-farmers-english/">
-                        <img src="logo\jardin_campus_farmers.png" alt="Image">
+                        <img src="logo\jardin_campus_farmers2.png" alt="Image">
                     </a>
                     <div class="text-description">
                         <h3>Jardins - Campus Farmers</h3>
